k8smanifests/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: ${NAME}
  namespace: ${NAMESPACE}
spec:
  ports:
    - name: http
      port: ${SERVER_PORT}
      protocol: TCP
      targetPort: ${SERVER_PORT}
  selector:
    app: ${NAME}
  type: ClusterIP
