k8smanifests/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/client-body-buffer-size: 128k
    nginx.ingress.kubernetes.io/proxy-body-size: 100m
    nginx.ingress.kubernetes.io/proxy-buffer-size: 4k
    nginx.ingress.kubernetes.io/proxy-connect-timeout: '5'
    nginx.ingress.kubernetes.io/proxy-read-timeout: '1800'
    nginx.ingress.kubernetes.io/proxy-send-timeout: '1800'
  name: ${NAME}
  namespace: ${NAMESPACE}
spec:
  rules:
    - host: ${INGRESS_HOST}
      http:
        paths:
          - backend:
              serviceName: ${NAME}
              servicePort: ${SERVER_PORT}
            path: /
  tls:
    - hosts:
        - ${INGRESS_HOST}
      secretName: ${INGRESS_TLS_SECRET}
